# NEWS_Mailer

./: get_news.py  main.py  make_pdf.py  pdf_compressor.py  pyproject.toml  scrapped_news.json  test.py
